refactored game scheduling/starting