@@ -16,12 +16,11 @@ import de.timesnake.library.basic.util.Loggers;
 import de.timesnake.library.basic.util.Status;
 import org.bukkit.Bukkit;
 
-import java.util.Collections;
+import java.util.Set;
 
 public class TmpGameServer implements ChannelListener {
 
   private final DbTmpGameServer database;
-  private final int port;
   private final String name;
   private final Integer maxPlayers;
   private final boolean mapsEnabled;
@@ -34,7 +33,6 @@ public class TmpGameServer implements ChannelListener {
 
   public TmpGameServer(DbTmpGameServer database) {
     this.database = database;
-    this.port = database.getPort();
     this.name = database.getName();
     if (database.getStatus().equals(Status.Server.ONLINE)) {
       this.state = State.READY;
@@ -51,7 +49,7 @@ public class TmpGameServer implements ChannelListener {
     this.mergeTeams = database.isTeamMerging();
     this.discord = database.isDiscordEnabled();
 
-    Server.getChannel().addListener(this, Collections.singleton(this.getName()));
+    Server.getChannel().addListener(this, Set.of(this.getName()));
   }
 
   public DbTmpGameServer getDatabase() {
@@ -60,14 +58,6 @@ public class TmpGameServer implements ChannelListener {
 
   public State getState() {
     return state;
-  }
-
-  public void setState(State state) {
-    this.state = state;
-  }
-
-  public Integer getPort() {
-    return port;
   }
 
   public String getName() {
@@ -124,7 +114,7 @@ public class TmpGameServer implements ChannelListener {
   private void checkIfStarted() {
     Server.runTaskLaterAsynchrony(() -> {
       if (this.state.equals(State.OFFLINE)) {
-        Loggers.LOUNGE.info("Game server offline, try a restart");
+        Loggers.LOUNGE.info("Game server offline, trying a restart");
         this.start();
       }
     }, 20 * 130, BasicLounge.getPlugin());
@@ -133,11 +123,9 @@ public class TmpGameServer implements ChannelListener {
   @ChannelHandler(type = ListenerType.SERVER_STATE, filtered = true)
   public void onServerMessage(ChannelServerMessage<ChannelServerMessage.State> msg) {
     if (ChannelServerMessage.State.READY.equals(msg.getValue())) {
-      LoungeServer.setState(LoungeServerManager.State.WAITING);
-      this.setState(State.READY);
+      this.state = State.READY;
       Loggers.LOUNGE.info("Game-Server is ready");
-      LoungeServer.getTimeManager().checkCountdown();
-      Loggers.LOUNGE.info("Updated state to " + LoungeServer.getState().name().toLowerCase());
+      LoungeServer.getStateManager().onServerUpdate(this.state);
     }
   }
 
@@ -146,38 +134,26 @@ public class TmpGameServer implements ChannelListener {
     Status.Server status = msg.getValue();
 
     if (Status.Server.ONLINE.equals(status)) {
-      LoungeServer.setState(LoungeServerManager.State.WAITING);
+      this.state = State.ONLINE;
     } else if (Status.Server.OFFLINE.equals(status)) {
-      this.setState(State.OFFLINE);
-      LoungeServer.setState(LoungeServerManager.State.WAITING);
-      LoungeServer.getTimeManager().resetGameCountdown();
+      this.state = State.OFFLINE;
     } else if (Status.Server.LAUNCHING.equals(status) || Status.Server.LOADING.equals(status)) {
-      this.setState(State.STARTING);
-      LoungeServer.setState(LoungeServerManager.State.WAITING);
-      LoungeServer.getTimeManager().resetGameCountdown();
+      this.state = State.STARTING;
     } else if (Status.Server.PRE_GAME.equals(status)) {
-      this.setState(State.PREGAME);
-      LoungeServer.setState(LoungeServerManager.State.PRE_GAME);
+      this.state = State.PREGAME;
     } else if (Status.Server.IN_GAME.equals(status)) {
-      this.setState(State.IN_GAME);
-      LoungeServer.setState(LoungeServerManager.State.IN_GAME);
-      LoungeServer.prepareLounge();
+      this.state = State.IN_GAME;
     } else if (Status.Server.POST_GAME.equals(status)) {
-      this.setState(State.POST_GAME);
-      LoungeServer.setState(LoungeServerManager.State.POST_GAME);
-    } else {
-      Loggers.LOUNGE.warning("Unknown status message from game server '" + status + "'");
-      LoungeServer.setState(LoungeServerManager.State.WAITING);
-      Server.setStatus(Status.Server.SERVICE);
-      LoungeServer.getTimeManager().resetGameCountdown();
+      this.state = State.POST_GAME;
     }
 
-    Loggers.LOUNGE.info("Updated state to " + LoungeServer.getState().name().toLowerCase());
+    LoungeServer.getStateManager().onServerUpdate(this.state);
   }
 
   public enum State {
     OFFLINE,
     STARTING,
+    ONLINE,
     READY,
     PREGAME,
     IN_GAME,
